--- a/admin.html
+++ b/admin.html
@@ -50,7 +50,7 @@
 
 <script>
 /* ==== 配置：把这个换成“script.google.com/.../exec” 的 Web App URL ==== */
-const EXEC_URL = 'https://script.google.com/macros/s/AKfycbxeSuKL4RrxJDFr78P9h52O5EHab7HqVntxkjrZ2y4apMgTzEMgsavYhZ7IHzWl5JhB/exec'; // ←替换
+const EXEC_URL = 'https://script.google.com/macros/s/AKfycbxeSuKL4RrxJDFr78P9h52O5EHab7HqVntxkjrZ2y4apMgTzEMgsavYhZ7IHzWl5JhB/exec'; // ←替
 
 /* ==== 工具 ==== */
 const TOKEN_KEY='xanadu_admin_token';
