--- a/admin.html
+++ b/admin.html
@@ -19,14 +19,16 @@
   .muted{color:#6b7280}
   .rowhead{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
   .badge{display:inline-block;padding:2px 8px;border-radius:999px;background:#fee2e2;color:#991b1b;font-size:12px;margin-left:8px}
-  .err{white-space:pre-wrap;font-family:ui-monospace,Consolas,monospace}
+  .err{white-space:pre-wrap;font-family:ui-monospace,SFMono-Regular,Consolas,monospace}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <div id="login" class="card">
+
+  <!-- 登录 -->
+  <div id="login" class="card" style="display:none">
     <h1>管理员登录</h1>
-    <div class="muted" id="apiHint">接口：<span id="apiUrl"></span></div>
+    <div class="muted" id="execShow"></div>
     <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:8px">
       <input id="u" placeholder="用户名" />
       <input id="p" type="password" placeholder="密码" />
@@ -35,7 +37,7 @@
     <div id="msg" class="muted" style="margin-top:8px"></div>
   </div>
 
-  <!-- 列表面板 -->
+  <!-- 列表 -->
   <div id="panel" style="display:none">
     <div class="card header">
       <h1>报课记录</h1>
@@ -49,11 +51,11 @@
 </div>
 
 <script>
-/* ==== 配置：把这个换成“script.google.com/.../exec” 的 Web App URL ==== */
-const EXEC_URL = 'https://script.google.com/macros/s/AKfycbxeSuKL4RrxJDFr78P9h52O5EHab7HqVntxkjrZ2y4apMgTzEMgsavYhZ7IHzWl5JhB/exec'; // ←替
+/* ====== 修改这里：你的 Apps Script /exec URL ====== */
+const EXEC_URL = 'https://script.google.com/macros/s/AKfycbwlaDdcxmpQpGmNyt8MnVEMeubht8jwGIHdyyOQSL9soJWgmqbM-Z7Wj_9fly7Ezxb8/exec';
 
-/* ==== 工具 ==== */
-const TOKEN_KEY='xanadu_admin_token';
+/* ====== 小工具 ====== */
+const TOKEN_KEY = 'xanadu_admin_token';
 function vstr(x){ return (x===undefined||x===null) ? '' : String(x); }
 function escapeHTML(s){
   return String(s==null?'':s).replace(/[&<>"']/g, c=>({
@@ -61,86 +63,94 @@ function escapeHTML(s){
   }[c]));
 }
 function getToken(){ return sessionStorage.getItem(TOKEN_KEY) || ''; }
-function setToken(t){ sessionStorage.setItem(TOKEN_KEY, t||''); }
+function setToken(t){ sessionStorage.setItem(TOKEN_KEY, (t||'').trim()); }
 function clearToken(){ sessionStorage.removeItem(TOKEN_KEY); }
 
-/* ==== JSONP 调用器 ==== */
-function jsonp(params){
+/* ====== JSONP 封装 ====== */
+function jsonp(url, params={}){
   return new Promise((resolve,reject)=>{
-    const cb='cb_'+Date.now()+'_'+Math.random().toString(36).slice(2);
-    const url = EXEC_URL + '?' + new URLSearchParams({ ...params, jsonp:cb, _ : Date.now() });
+    const cb = 'cb_'+Date.now()+'_'+Math.floor(Math.random()*1e6);
+    const qs = new URLSearchParams({...params, jsonp:cb}).toString();
+    const full = url + (url.includes('?')?'&':'?') + qs;
     const s = document.createElement('script');
-    let done = false;
-    window[cb] = (data)=>{
-      if(done) return;
-      done = true;
+    const timer = setTimeout(()=>{
       cleanup();
-      resolve(data);
-    };
-    s.onerror = ()=>{
-      if(done) return;
-      done = true;
-      cleanup();
-      reject(new Error('JSONP_LOAD_ERROR'));
-    };
+      reject(new Error('JSONP timeout'));
+    }, 15000);
     function cleanup(){
+      clearTimeout(timer);
       delete window[cb];
       s.remove();
     }
-    s.src = url;
+    window[cb] = (data)=>{ cleanup(); resolve(data); };
+    s.onerror = ()=>{ cleanup(); reject(new Error('JSONP network error')); };
+    s.src = full;
     document.body.appendChild(s);
   });
 }
 
-/* ==== API 封装（全部走 JSONP） ==== */
+/* ====== API ====== */
 function apiAuth(user, pass){
-  return jsonp({ action:'auth', user, pass });
+  return jsonp(EXEC_URL, { action:'auth', user, pass });
 }
 function apiList(token){
-  return jsonp({ action:'list', auth: token });
+  return jsonp(EXEC_URL, { action:'list', auth:(token||'').trim() });
 }
 function apiDelete(ticket, token){
-  return jsonp({ action:'delete', ticket, auth: token });
+  return jsonp(EXEC_URL, { action:'delete', ticket, auth:(token||'').trim() });
 }
 
-/* ==== 登录 / 退出 ==== */
+/* ====== 登录 / 退出 ====== */
 async function login(){
   const u = document.getElementById('u').value.trim();
   const p = document.getElementById('p').value.trim();
-  const msg = document.getElementById('msg');
-  msg.textContent = '登录中…';
+  document.getElementById('msg').textContent = '登录中…';
   try{
     const j = await apiAuth(u, p);
-    if(!j.ok){ msg.textContent='授权失败：' + (j.error||''); return; }
-    setToken(j.token||'');
+    if(!j.ok){
+      document.getElementById('msg').textContent = '授权失败：' + (j.error||'');
+      return;
+    }
+    setToken(j.token || '');
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
   }catch(err){
-    msg.textContent='网络异常：' + String(err);
+    document.getElementById('msg').textContent = '网络异常：' + String(err);
   }
 }
 function logout(){
   clearToken();
   document.getElementById('panel').style.display='none';
   document.getElementById('login').style.display='block';
-  document.getElementById('msg').textContent='';
+  document.getElementById('msg').textContent = '';
 }
 
-/* ==== 列表渲染 ==== */
+/* ====== 列表渲染 ====== */
 async function loadList(){
   const token = getToken();
   const box = document.getElementById('list');
-  box.innerHTML='<div class="card">加载中…</div>';
-  if(!token){ box.innerHTML='<div class="card">未登录或口令失效，请重新登录。</div>'; logout(); return; }
+  box.innerHTML = '<div class="card">加载中…</div>';
+
+  if(!token){
+    box.innerHTML = '<div class="card">未登录或口令失效，请重新登录。</div>';
+    return;
+  }
+
   try{
     const j = await apiList(token);
     if(!j.ok){
-      if(String(j.error||'').includes('AUTH')){ box.innerHTML='<div class="card">口令无效或已过期，请重新登录。</div>'; logout(); return; }
+      if(String(j.error||'').includes('AUTH')){
+        box.innerHTML = '<div class="card">口令无效或已过期，请点右上角【退出】后重新登录。</div>';
+        return; // 不立刻 logout，方便你看到提示
+      }
       box.innerHTML = `<div class="card"><b>读取失败：</b>${escapeHTML(j.error||'')}</div>`;
       return;
     }
-    const list = Array.isArray(j.data)? j.data : [];
+
+    const list = Array.isArray(j.data) ? j.data : [];
+
+    // 疑重：同姓名 +（同微信 或 同邮箱）
     const seen = new Map();
     for(const r of list){
       const k1 = `${vstr(r.name).trim()}|${vstr(r.wechat).trim()}`;
@@ -148,16 +158,26 @@ async function loadList(){
       seen.set(k1,(seen.get(k1)||0)+1);
       seen.set(k2,(seen.get(k2)||0)+1);
     }
+
+    // 时间倒序
     const sorted = list.slice().sort((a,b)=>{
       const ta = new Date(vstr(a.ts)).getTime()||0;
       const tb = new Date(vstr(b.ts)).getTime()||0;
       return tb - ta;
     });
+
     const html = sorted.map(r=>{
-      const name=vstr(r.name).trim(), wechat=vstr(r.wechat).trim(), email=vstr(r.email).trim();
-      const phone=vstr(r.phone).trim(), best=vstr(r.best), notes=vstr(r.notes), detail=vstr(r.detail);
-      const ticket=vstr(r.ticket); const suspected=(seen.get(`${name}|${wechat}`)>1)||(seen.get(`${name}|${email}`)>1);
+      const name   = vstr(r.name).trim();
+      const wechat = vstr(r.wechat).trim();
+      const email  = vstr(r.email).trim();
+      const phone  = vstr(r.phone).trim();
+      const best   = vstr(r.best);
+      const notes  = vstr(r.notes);
+      const detail = vstr(r.detail);
+      const ticket = vstr(r.ticket);
+      const suspected = (seen.get(`${name}|${wechat}`)>1) || (seen.get(`${name}|${email}`)>1);
       const ts = r.ts ? new Date(vstr(r.ts)).toLocaleString() : '';
+
       return `
       <div class="card">
         <div class="rowhead">
@@ -176,24 +196,28 @@ async function loadList(){
         </table>
       </div>`;
     }).join('');
+
     box.innerHTML = html || '<div class="card">暂无记录</div>';
   }catch(err){
-    box.innerHTML=`<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
+    box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
   }
 }
 
-/* ==== 删除 ==== */
+/* ====== 删除 ====== */
 async function confirmDelete(ticket){
   const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
   if(phrase===null) return;
   if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
+
   const token = getToken();
-  if(!token){ alert('未登录或口令失效，请重新登录。'); logout(); return; }
+  if(!token){ alert('未登录或口令失效，请重新登录。'); return; }
+
   try{
     const j = await apiDelete(ticket, token);
     if(!j.ok){
-      if(String(j.error||'').includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
-      alert('删除失败：' + (j.error||'')); return;
+      if(String(j.error||'').includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); return; }
+      alert('删除失败：' + (j.error||''));
+      return;
     }
     loadList();
   }catch(err){
@@ -201,12 +225,16 @@ async function confirmDelete(ticket){
   }
 }
 
-/* ==== 初始化 ==== */
-document.getElementById('apiUrl').textContent = EXEC_URL;
-if(getToken()){
-  document.getElementById('panel').style.display='block';
-  loadList();
-}
+/* ====== 初始化 ====== */
+(function init(){
+  document.getElementById('execShow').textContent = '接口：' + EXEC_URL;
+  if(getToken()){
+    document.getElementById('panel').style.display='block';
+    loadList();
+  }else{
+    document.getElementById('login').style.display='block';
+  }
+})();
 </script>
 </body>
 </html>
