--- a/admin.html
+++ b/admin.html
@@ -53,7 +53,7 @@
 <script>
 /* ============ 配置：把这个地址换成你的 exec URL ============ */
 const EXEC_URL = 'https://script.google.com/macros/s/AKfycbwlaDdcxmpQpGmNyt8MnVEMeubht8jwGIHdyyOQSL9soJWgmqbM-Z7Wj_9fly7Ezxb8/exec';
-const TOKEN_KEY = 'xanadu_admin_token';
+const TOKEN_KEY = 'txttoken20240917';
 
 /* ============ JSONP 工具（避免 CORS） ============ */
 function jsonp(url, params={}, timeout=120000){
