--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
 <script>
 /* ============ 配置 ============ */
 // 替换为你 Apps Script 部署后的 /exec URL
-const API_URL = 'https://script.google.com/macros/s/你的EXEC地址/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbxiwEAjcWKEp-PNTh508P0_dK4bKCDS4Z2rtroNV3WHo5pZ-Gqfq4Af3NcE5i_mQ88/exec';
 
 // 存 token 的 key
 const TOKEN_KEY = 'xanadu_admin_token';
