--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TXT 报课咨询记录管理</title>
+<title>TXT 报课记录管理 (Debug)</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
@@ -51,165 +51,106 @@
 
 <script>
 /* ============ 配置 ============ */
-// 替换为你 Apps Script 部署后的 /exec URL
-const API_URL = 'https://script.google.com/macros/s/AKfycbxiwEAjcWKEp-PNTh508P0_dK4bKCDS4Z2rtroNV3WHo5pZ-Gqfq4Af3NcE5i_mQ88/exec';
-
-// 存 token 的 key
+const API_URL = 'https://script.google.com/macros/s/AKfycbzZ2SOhXJvvPYj0aQ-7HqW6l_yk52ZeLWhskEyKpw2bHx8luFO4scniqtULB7hor6vn/exec';
 const TOKEN_KEY = 'xanadu_admin_token';
 
-/* ============ 小工具 ============ */
+/* ============ 工具 ============ */
 function vstr(x){ return (x===undefined||x===null) ? '' : String(x); }
-function escapeHTML(s){
-  return String(s==null?'':s).replace(/[&<>"']/g, c=>({
-    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
-  }[c]));
-}
-function getToken(){ return sessionStorage.getItem(TOKEN_KEY) || ''; }
-function setToken(t){ sessionStorage.setItem(TOKEN_KEY, t||''); }
+function escapeHTML(s){ return String(s==null?'':s).replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+function getToken(){ const t = sessionStorage.getItem(TOKEN_KEY)||''; console.log("DEBUG getToken:",t); return t; }
+function setToken(t){ console.log("DEBUG setToken:",t); sessionStorage.setItem(TOKEN_KEY,t||''); }
 function clearToken(){ sessionStorage.removeItem(TOKEN_KEY); }
 
-/* ============ API 封装 ============ */
-// 认证
+/* ============ API ============ */
 async function apiAuth(user, pass){
+  console.log("DEBUG 调用 auth:", user, pass);
   const res = await fetch(API_URL, {
     method:'POST',
-    headers:{ 'Content-Type':'text/plain;charset=utf-8' }, // 避免预检
+    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
     body: JSON.stringify({ action:'auth', user, pass })
   });
   const text = await res.text();
+  console.log("DEBUG auth response text:", text);
   try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,200) }; }
+  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) }; }
 }
-// 列表
+
 async function apiList(token){
   const url = `${API_URL}?action=list&auth=${encodeURIComponent(token)}&_=${Date.now()}`;
-  const res = await fetch(url, { method:'GET' });
+  console.log("DEBUG list 请求 URL:", url);
+  const res = await fetch(url,{method:'GET'});
   const text = await res.text();
-  try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,200) }; }
+  console.log("DEBUG list response text:", text);
+  try{
+    if(text.startsWith("cb(")){ // JSONP 兼容
+      return JSON.parse(text.slice(3,-2));
+    }
+    return JSON.parse(text);
+  }catch{
+    return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) };
+  }
 }
-// 删除
+
 async function apiDelete(ticket, token){
+  console.log("DEBUG delete ticket:", ticket);
   const res = await fetch(API_URL, {
     method:'POST',
     headers:{ 'Content-Type':'text/plain;charset=utf-8' },
     body: JSON.stringify({ action:'delete', ticket, auth:token })
   });
   const text = await res.text();
+  console.log("DEBUG delete response:", text);
   try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,200) }; }
+  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) }; }
 }
 
-/* ============ 登录 / 退出 ============ */
+/* ============ 登录逻辑 ============ */
 async function login(){
-  const u = document.getElementById('u').value.trim();
-  const p = document.getElementById('p').value.trim();
-  document.getElementById('msg').textContent = '登录中…';
-
+  const u=document.getElementById('u').value.trim();
+  const p=document.getElementById('p').value.trim();
+  document.getElementById('msg').textContent='登录中…';
   try{
-    const j = await apiAuth(u, p);
-    if(!j.ok){
-      document.getElementById('msg').textContent = '授权失败：' + (j.error||'');
-      return;
-    }
-    setToken(j.token || '');
+    const j = await apiAuth(u,p);
+    if(!j.ok){ document.getElementById('msg').textContent='授权失败:'+ (j.error||''); return; }
+    setToken(j.token||'');
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
   }catch(err){
-    document.getElementById('msg').textContent = '网络异常：' + String(err);
+    document.getElementById('msg').textContent='网络异常:'+err;
   }
 }
+function logout(){ clearToken(); document.getElementById('panel').style.display='none'; document.getElementById('login').style.display='block'; }
 
-function logout(){
-  clearToken();
-  document.getElementById('panel').style.display='none';
-  document.getElementById('login').style.display='block';
-  document.getElementById('msg').textContent = '';
-}
-
-/* ============ 列表渲染 ============ */
+/* ============ 列表 ============ */
 async function loadList(){
-  const token = getToken();
-  const box = document.getElementById('list');
-  box.innerHTML = '<div class="card">加载中…</div>';
-
-  if(!token){
-    box.innerHTML = '<div class="card">未登录或口令失效，请重新登录。</div>';
-    logout();
-    return;
-  }
-
-  try{
-    const j = await apiList(token);
-    if(!j.ok){
-      if(j.error && String(j.error).includes('AUTH')){
-        box.innerHTML = '<div class="card">口令无效或已过期，请重新登录。</div>';
-        logout();
-        return;
-      }
-      box.innerHTML = `<div class="card">读取失败：${escapeHTML(j.error||'')}</div>`;
-      return;
-    }
-
-    const list = Array.isArray(j.data) ? j.data : [];
-    const seen = new Map();
-    for(const r of list){
-      const k1 = `${vstr(r.name)}|${vstr(r.wechat)}`;
-      const k2 = `${vstr(r.name)}|${vstr(r.email)}`;
-      seen.set(k1, (seen.get(k1)||0)+1);
-      seen.set(k2, (seen.get(k2)||0)+1);
-    }
-
-    const sorted = list.slice().sort((a,b)=> new Date(b.ts).getTime() - new Date(a.ts).getTime());
-    const html = sorted.map(r=>{
-      const suspected = (seen.get(`${vstr(r.name)}|${vstr(r.wechat)}`)>1) || (seen.get(`${vstr(r.name)}|${vstr(r.email)}`)>1);
-      const ts = r.ts ? new Date(r.ts).toLocaleString() : '';
-      return `
-      <div class="card">
-        <div class="rowhead">
-          <div><b>咨询号码：</b>${escapeHTML(vstr(r.ticket))}${suspected?'<span class="badge">疑重</span>':''}</div>
-          <button class="btn red" onclick="confirmDelete('${escapeHTML(vstr(r.ticket))}')">删除</button>
-        </div>
-        <table>
-          <tr><th>客户姓名</th><td>${escapeHTML(vstr(r.name))}</td></tr>
-          <tr><th>微信号</th><td>${escapeHTML(vstr(r.wechat)||'n/a')}</td></tr>
-          <tr><th>邮箱</th><td>${escapeHTML(vstr(r.email))}</td></tr>
-          <tr><th>电话</th><td>${escapeHTML(vstr(r.phone))}</td></tr>
-          <tr><th>最佳匹配推荐</th><td>${escapeHTML(vstr(r.best))}</td></tr>
-          <tr><th>备注</th><td>${escapeHTML(vstr(r.notes))}</td></tr>
-          <tr><th>报课详细选项</th><td>${escapeHTML(vstr(r.detail))}</td></tr>
-          <tr><th>时间</th><td class="muted">${escapeHTML(ts)}</td></tr>
-        </table>
-      </div>`;
-    }).join('');
-
-    box.innerHTML = html || '<div class="card">暂无记录</div>';
-  }catch(err){
-    box.innerHTML = `<div class="card err">网络异常或接口错误：${escapeHTML(String(err))}</div>`;
-  }
+  const token=getToken();
+  const box=document.getElementById('list');
+  if(!token){ box.innerHTML='<div class="card">未登录</div>'; return; }
+  box.innerHTML='<div class="card">加载中…</div>';
+  const j=await apiList(token);
+  if(!j.ok){ box.innerHTML=`<div class="card">读取失败:${escapeHTML(j.error||'')}</div>`; return; }
+  const list=Array.isArray(j.data)?j.data:[];
+  box.innerHTML=list.map(r=>`
+    <div class="card">
+      <div class="rowhead"><b>咨询号码：</b>${escapeHTML(r.ticket||'')}</div>
+      <table>
+        <tr><th>客户姓名</th><td>${escapeHTML(r.name||'')}</td></tr>
+        <tr><th>微信号</th><td>${escapeHTML(r.wechat||'n/a')}</td></tr>
+        <tr><th>邮箱</th><td>${escapeHTML(r.email||'')}</td></tr>
+        <tr><th>电话</th><td>${escapeHTML(r.phone||'')}</td></tr>
+        <tr><th>最佳匹配推荐</th><td>${escapeHTML(r.best||'')}</td></tr>
+        <tr><th>备注</th><td>${escapeHTML(r.notes||'')}</td></tr>
+        <tr><th>报课详细选项</th><td>${escapeHTML(r.detail||'')}</td></tr>
+        <tr><th>时间</th><td>${escapeHTML(r.ts||'')}</td></tr>
+      </table>
+    </div>`).join('') || '<div class="card">暂无记录</div>';
 }
 
-/* ============ 删除 ============ */
-async function confirmDelete(ticket){
-  const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
-  if(phrase===null) return;
-  if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
-
-  const token = getToken();
-  if(!token){ alert('未登录或口令失效，请重新登录。'); logout(); return; }
-
-  try{
-    const j = await apiDelete(ticket, token);
-    if(!j.ok){
-      if(j.error && String(j.error).includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
-      alert('删除失败：' + (j.error||'')); return;
-    }
-    loadList();
-  }catch(err){
-    alert('网络异常，删除失败');
-  }
-}
+/* ============ 初始化 ============ */
+(function init(){
+  if(getToken()){ document.getElementById('login').style.display='none'; document.getElementById('panel').style.display='block'; loadList(); }
+})();
 </script>
 </body>
 </html>
