--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TXT 报课记录管理 (Debug)</title>
+<title>Xanadu 报课记录管理</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
@@ -24,13 +24,12 @@
 </head>
 <body>
 <div class="wrap">
-
   <!-- 登录卡片 -->
   <div id="login" class="card">
     <h1>管理员登录</h1>
     <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <input id="u" placeholder="用户名" />
-      <input id="p" type="password" placeholder="密码" />
+      <input id="u" placeholder="用户名（txtadmin）" />
+      <input id="p" type="password" placeholder="密码（202412）" />
       <button class="btn" onclick="login()">登录</button>
     </div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
@@ -42,7 +41,6 @@
       <h1>报课记录</h1>
       <div style="display:flex;gap:8px">
         <button class="btn" onclick="loadList()">刷新</button>
-        <button class="btn red" onclick="logout()">退出</button>
       </div>
     </div>
     <div id="list"></div>
@@ -50,107 +48,153 @@
 </div>
 
 <script>
-/* ============ 配置 ============ */
-const API_URL = 'https://script.google.com/macros/s/AKfycbyc-Jva3yKKS-0bUhfCopluaAdT1J089H9RbipoczjJZWxXvG-jFnhEx7_oEIUWrd6q/exec';
-const TOKEN_KEY = 'xanadu_admin_token';
+// ====== Apps Script /exec 地址（保持你的现有地址即可） ======
+const API_URL = 'https://script.google.com/macros/s/AKfycbxx1E6Ao9pBv1Ml3uyAe6RTmNfE9b-vcdia0QG6eCKIjnmcvjGAo5wmjbEHdIqLvU4I/exec';
 
-/* ============ 工具 ============ */
-function vstr(x){ return (x===undefined||x===null) ? '' : String(x); }
-function escapeHTML(s){ return String(s==null?'':s).replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-function getToken(){ const t = sessionStorage.getItem(TOKEN_KEY)||''; console.log("DEBUG getToken:",t); return t; }
-function setToken(t){ console.log("DEBUG setToken:",t); sessionStorage.setItem(TOKEN_KEY,t||''); }
-function clearToken(){ sessionStorage.removeItem(TOKEN_KEY); }
+/* ---------- 小工具：安全转字符串 ---------- */
+function vstr(x){ return (x===undefined || x===null) ? '' : String(x); }
 
-/* ============ API ============ */
-async function apiAuth(user, pass){
-  console.log("DEBUG 调用 auth:", user, pass);
-  const res = await fetch(API_URL, {
-    method:'POST',
-    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'auth', user, pass })
-  });
+/* ---------- API 封装 ---------- */
+async function apiList(){
+  const url = `${API_URL}?action=list&_=${Date.now()}`;
+  const res = await fetch(url, { method:'GET' });
   const text = await res.text();
-  console.log("DEBUG auth response text:", text);
-  try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) }; }
-}
-
-async function apiList(token){
-  const url = `${API_URL}?action=list&auth=${encodeURIComponent(token)}&_=${Date.now()}`;
-  console.log("DEBUG list 请求 URL:", url);
-  const res = await fetch(url,{method:'GET'});
-  const text = await res.text();
-  console.log("DEBUG list response text:", text);
+  if(!res.ok){
+    return { ok:false, error:`HTTP ${res.status}`, raw:text };
+  }
   try{
-    if(text.startsWith("cb(")){ // JSONP 兼容
-      return JSON.parse(text.slice(3,-2));
-    }
     return JSON.parse(text);
-  }catch{
-    return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) };
+  }catch(e){
+    return { ok:false, error:'NOT_JSON (接口未返回 JSON，常见是未公开部署或 URL 错误)', raw:text.slice(0,800) };
   }
 }
 
-async function apiDelete(ticket, token){
-  console.log("DEBUG delete ticket:", ticket);
-  const res = await fetch(API_URL, {
-    method:'POST',
-    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'delete', ticket, auth:token })
+async function apiDelete(ticket){
+  const res  = await fetch(API_URL, {
+    method: 'POST',
+    headers: { 'Content-Type':'text/plain;charset=utf-8' },
+    body: JSON.stringify({ action:'delete', ticket })
   });
   const text = await res.text();
-  console.log("DEBUG delete response:", text);
   try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,500) }; }
+  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,800) }; }
 }
 
-/* ============ 登录逻辑 ============ */
-async function login(){
+/* ---------- 登录 ---------- */
+function login(){
   const u=document.getElementById('u').value.trim();
   const p=document.getElementById('p').value.trim();
-  document.getElementById('msg').textContent='登录中…';
-  try{
-    const j = await apiAuth(u,p);
-    if(!j.ok){ document.getElementById('msg').textContent='授权失败:'+ (j.error||''); return; }
-    setToken(j.token||'');
+  if(u==='txtadmin' && p==='202412'){
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
-  }catch(err){
-    document.getElementById('msg').textContent='网络异常:'+err;
+  }else{
+    document.getElementById('msg').textContent='授权失败';
   }
 }
-function logout(){ clearToken(); document.getElementById('panel').style.display='none'; document.getElementById('login').style.display='block'; }
 
-/* ============ 列表 ============ */
+/* ---------- 渲染列表 ---------- */
 async function loadList(){
-  const token=getToken();
-  const box=document.getElementById('list');
-  if(!token){ box.innerHTML='<div class="card">未登录</div>'; return; }
-  box.innerHTML='<div class="card">加载中…</div>';
-  const j=await apiList(token);
-  if(!j.ok){ box.innerHTML=`<div class="card">读取失败:${escapeHTML(j.error||'')}</div>`; return; }
-  const list=Array.isArray(j.data)?j.data:[];
-  box.innerHTML=list.map(r=>`
-    <div class="card">
-      <div class="rowhead"><b>咨询号码：</b>${escapeHTML(r.ticket||'')}</div>
-      <table>
-        <tr><th>客户姓名</th><td>${escapeHTML(r.name||'')}</td></tr>
-        <tr><th>微信号</th><td>${escapeHTML(r.wechat||'n/a')}</td></tr>
-        <tr><th>邮箱</th><td>${escapeHTML(r.email||'')}</td></tr>
-        <tr><th>电话</th><td>${escapeHTML(r.phone||'')}</td></tr>
-        <tr><th>最佳匹配推荐</th><td>${escapeHTML(r.best||'')}</td></tr>
-        <tr><th>备注</th><td>${escapeHTML(r.notes||'')}</td></tr>
-        <tr><th>报课详细选项</th><td>${escapeHTML(r.detail||'')}</td></tr>
-        <tr><th>时间</th><td>${escapeHTML(r.ts||'')}</td></tr>
-      </table>
-    </div>`).join('') || '<div class="card">暂无记录</div>';
+  const box = document.getElementById('list');
+  box.innerHTML = '<div class="card">加载中…</div>';
+
+  try{
+    const j = await apiList();
+
+    if(!j.ok){
+      box.innerHTML = `
+        <div class="card">
+          <div><b>读取失败：</b>${escapeHTML(j.error||'')}</div>
+          ${j.raw ? `<div class="err" style="margin-top:8px">${escapeHTML(j.raw)}</div>` : ''}
+        </div>`;
+      console.error('list error:', j);
+      return;
+    }
+
+    const list = Array.isArray(j.data)? j.data : [];
+
+    // 疑重：同姓名 +（同微信 或 同邮箱）
+    const seen = new Map();
+    for(const r of list){
+      const k1 = `${vstr(r.name).trim()}|${vstr(r.wechat).trim()}`;
+      const k2 = `${vstr(r.name).trim()}|${vstr(r.email).trim()}`;
+      seen.set(k1, (seen.get(k1)||0)+1);
+      seen.set(k2, (seen.get(k2)||0)+1);
+    }
+
+    // 按时间倒序
+    const sorted = list.slice().sort((a,b)=>{
+      const ta = new Date(vstr(a.ts)).getTime() || 0;
+      const tb = new Date(vstr(b.ts)).getTime() || 0;
+      return tb - ta;
+    });
+
+    const html = sorted.map(r=>{
+      const name   = vstr(r.name).trim();
+      const wechat = vstr(r.wechat).trim();
+      const email  = vstr(r.email).trim();
+      const phone  = vstr(r.phone).trim();
+      const best   = vstr(r.best);
+      const notes  = vstr(r.notes);
+      const detail = vstr(r.detail);
+      const ticket = vstr(r.ticket);
+      const suspected = (seen.get(`${name}|${wechat}`)>1) || (seen.get(`${name}|${email}`)>1);
+      const ts = r.ts ? new Date(vstr(r.ts)).toLocaleString() : '';
+
+      return `
+      <div class="card">
+        <div class="rowhead">
+          <div>
+            <b>咨询号码：</b>${escapeHTML(ticket)}
+            ${suspected?'<span class="badge">疑重</span>':''}
+          </div>
+          <button class="btn red" onclick="confirmDelete('${escapeHTML(ticket)}')">删除</button>
+        </div>
+        <table>
+          <tr><th>客户姓名</th><td>${escapeHTML(name)}</td></tr>
+          <tr><th>微信号</th><td>${escapeHTML(wechat || 'n/a')}</td></tr>
+          <tr><th>邮箱</th><td>${escapeHTML(email)}</td></tr>
+          <tr><th>电话</th><td>${escapeHTML(phone)}</td></tr>
+          <tr><th>最佳匹配推荐</th><td>${escapeHTML(best)}</td></tr>
+          <tr><th>备注</th><td>${escapeHTML(notes)}</td></tr>
+          <tr><th>报课详细选项</th><td>${escapeHTML(detail)}</td></tr>
+          <tr><th>时间</th><td class="muted">${escapeHTML(ts)}</td></tr>
+        </table>
+      </div>`;
+    }).join('');
+
+    box.innerHTML = html || '<div class="card">暂无记录</div>';
+  }catch(err){
+    console.error(err);
+    box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
+  }
 }
 
-/* ============ 初始化 ============ */
-(function init(){
-  if(getToken()){ document.getElementById('login').style.display='none'; document.getElementById('panel').style.display='block'; loadList(); }
-})();
+/* ---------- 删除确认 ---------- */
+async function confirmDelete(ticket){
+  const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
+  if(phrase===null) return;
+  if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
+  try{
+    const j = await apiDelete(ticket);
+    if(!j.ok){
+      alert('删除失败：' + (j.error||''));
+      console.error('delete error:', j);
+      return;
+    }
+    loadList();
+  }catch(err){
+    console.error(err);
+    alert('网络异常，删除失败');
+  }
+}
+
+/* ---------- HTML 转义 ---------- */
+function escapeHTML(s){
+  return String(s==null?'':s).replace(/[&<>"']/g, c=>({
+    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
+  }[c]));
+}
 </script>
 </body>
 </html>
