--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Xanadu 报课记录管理</title>
+<title>TXT 报课咨询记录管理</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
@@ -28,8 +28,8 @@
   <div id="login" class="card">
     <h1>管理员登录</h1>
     <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <input id="u" placeholder="用户名（txtadmin）" />
-      <input id="p" type="password" placeholder="密码（202412）" />
+      <input id="u" placeholder="用户名" />
+      <input id="p" type="password" placeholder="密码" />
       <button class="btn" onclick="login()">登录</button>
     </div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
@@ -49,7 +49,7 @@
 
 <script>
 // ====== Apps Script /exec 地址（保持你的现有地址即可） ======
-const API_URL = 'https://script.google.com/macros/s/AKfycbxx1E6Ao9pBv1Ml3uyAe6RTmNfE9b-vcdia0QG6eCKIjnmcvjGAo5wmjbEHdIqLvU4I/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbydo3q4E1OZ8gCcW-yibxuWjj04JzQ3-UyduzmKRKfJQHN4cKjqyF9HXHw8BLYrTvRN/exec';
 
 /* ---------- 小工具：安全转字符串 ---------- */
 function vstr(x){ return (x===undefined || x===null) ? '' : String(x); }
