--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TXT 报课记录管理（邮箱白名单）</title>
+<title>TXT 报课咨询记录管理</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
@@ -27,7 +27,7 @@
 
   <!-- 登录卡片 -->
   <div id="login" class="card">
-    <h1>管理员登录（邮箱白名单）</h1>
+    <h1>管理员登录</h1>
     <div class="muted">请使用<strong>被授权的 Google 账号</strong>登录。</div>
     <div id="gbtn" class="google"></div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
